--- a/medellin-overflow/src/app/app.component.html
+++ b/medellin-overflow/src/app/app.component.html
@@ -3,3 +3,4 @@
     <span class="space"></span>
     <mat-icon>account_circle</mat-icon>
 </mat-toolbar>
+<app-question-detail></app-question-detail>
